レスポンシブ対応

--- a/humanstemcells.html
+++ b/humanstemcells.html
@@ -29,8 +29,9 @@
 <body>
     <!-- ヘッダーここから -->
     <header>
-        <div class="header">
-            <img src="./img/logo.svg" alt="Ruu ロゴ" class="header__logoImg"><img src="./img/menu.svg" id="menuBtn" alt="メニュー" class="header__menuImg">
+        <header>
+            <div class="header">
+                <img src="./img/logo.svg" alt="Ruu ロゴ" class="header__logoImg"><img src="./img/menu.svg" id="menuBtn" alt="メニュー" class="header__menuImg">
 
         <!-- メニュー -->
         <div id="overlay" class="overlay"></div>
@@ -45,7 +46,7 @@
                 <a href="#news" class="jsNav__list"><li><p>NEWS</p></li></a>
                 <a href="https://beauty.hotpepper.jp/slnH000705260/" class="jsNav__list"><li><p>RESERVATION</p></li></a>
             </ul>
-            <img src="./img/logo.svg" alt="Ruu ロゴ" class="jsNav__logo">
+            <a href="/index.html"><img src="./img/logo.svg" alt="Ruu ロゴ" class="jsNav__logo"></a>
         </nav>
 
         <!-- メニューここまで -->
@@ -190,7 +191,7 @@
 <footer>
     <div class="footer">
             <div class="footerContents__logo">
-                <a href="#top"><img src="./img/logo.svg" alt="Ruu ロゴ"></a>
+                <a href="/index.html"><img src="./img/logo.svg" alt="Ruu ロゴ"></a>
             </div>
                 <nav class="footerMenu">
                     <ul>
@@ -211,7 +212,7 @@
 
 <!-- JS読み込み -->
 
-<script src="stylesheet.js"></script>
+<script src="script.js" defer></script>
 
 </body>
 </html>
