--- a/improvement.html
+++ b/improvement.html
@@ -45,7 +45,7 @@
                 <a href="#news" class="jsNav__list"><li><p>NEWS</p></li></a>
                 <a href="https://beauty.hotpepper.jp/slnH000705260/" class="jsNav__list"><li><p>RESERVATION</p></li></a>
             </ul>
-            <img src="./img/logo.svg" alt="Ruu ロゴ" class="jsNav__logo">
+            <a href="/index.html"><img src="./img/logo.svg" alt="Ruu ロゴ" class="jsNav__logo"></a>
         </nav>
 
         <!-- メニューここまで -->
@@ -172,8 +172,9 @@
 <footer>
     <div class="footer">
             <div class="footerContents__logo">
-                <a href="#top"><img src="./img/logo.svg" alt="Ruu ロゴ"></a>
+                <a href="/index.html"><img src="./img/logo.svg" alt="Ruu ロゴ"></a>
             </div>
+
                 <nav class="footerMenu">
                     <ul>
                         <a href="#top"><li><p class="footerMenu__label">TOP</p></li></a>
@@ -192,7 +193,7 @@
 <!-- フッターここまで -->
 <!-- JS読み込み -->
 
-<script src="stylesheet.js"></script>
+<script src="script.js" defer></script>
 
 </body>
 </html>
