レスポンシブ対応つづき

--- a/humanstemcells.html
+++ b/humanstemcells.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Ruu <箕面市桜井のプライベートヘアサロン></title>
+    <title>Ruu｜箕面市桜井のプライベートヘアサロン</title>
 
         <!-- style.css 読み込み -->
         <link rel="stylesheet" href="./css/style.css" />
@@ -12,9 +12,7 @@
         <!-- フォント読み込み -->
 
         <!-- Zen Kaku Gothic New -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Zen+Kaku+Gothic+New:wght@300;400;500&display=swap" rel="stylesheet">
 
         <!-- Averia Serif Libre -->
 
