レスポンシブ対応つづき

--- a/improvement.html
+++ b/improvement.html
@@ -103,8 +103,10 @@
                 <div class="ttlUnderBar"></div>
 
             <div class="improvementColorImg">
-                <img src="./img/improvementcolor_pic1.webp" alt="Ruu 質感再生カラー" class="improvementColorImg__01 fadeRight">
-                <img src="./img/improvementcolor_pic2.webp" alt="Ruu 質感再生カラー" class="improvementColorImg__02 fadeLeft">
+                <img src="./img/improvementcolor_pc_pic1.webp" alt="Ruu 質感再生カラー" class="improvementColorImg__01 fadeRight pcOnly">
+                <img src="./img/improvementcolor_sp_pic1.webp" alt="Ruu 質感再生カラー" class="improvementColorImg__01 fadeRight spOnly">
+                <img src="./img/improvementcolor_pc_pic2.webp" alt="Ruu 質感再生カラー" class="improvementColorImg__02 fadeLeft pcOnly">
+                <img src="./img/improvementcolor_sp_pic2.webp" alt="Ruu 質感再生カラー" class="improvementColorImg__02 fadeLeft spOnly">
             </div>
 
             <div class="improvementColorTxts fadeUp">
