--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <img src="./img/concept_pic.webp" alt="Ruu コンセプト画像" class="conceptImg fadeUp">
 
         <div class="conceptSupport fadeLeft">
-            <p class="conceptSupport__details">
+            <p class="conceptSupport__details split">
                 Ruu（ルウ）は、お客様の髪の悩みに寄り添う<br>
                 完全貸切マンツーマン美容室です。<br>
                 <br>
@@ -227,7 +227,7 @@
 
     <!-- フローティングバナー -->
 
-    <div id="float" class="float spOnly">
+    <div id="float" class="float">
 
         <a href="https://lin.ee/wPSXxHY " class="float__btn">
             <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -274,7 +274,7 @@
 <!-- フッター -->
 
 <footer>
-    <div id="footer" class="footer">
+    <div class="footer">
         <div class="footerContents__logo">
             <a href="/index.html"><img src="./img/logo.svg" alt="Ruu ロゴ"></a>
         </div>
@@ -292,7 +292,6 @@
         <p class="copyright">©2025 Ruu ALL RIGHTS RESERVED.</p>
     </div>
 </footer>
-
 <!-- フッターここまで -->
 
 <!-- JS読み込み -->
