--- a/improvement.html
+++ b/improvement.html
@@ -171,7 +171,7 @@
 
     <!-- フローティングバナー -->
 
-    <div id="float" class="float spOnly">
+    <div id="float" class="float">
 
         <a href="https://lin.ee/wPSXxHY " class="float__btn">
             <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
