--- a/humanstemcells.html
+++ b/humanstemcells.html
@@ -103,7 +103,8 @@
         </div>
 
         <div class="kyoukamiMenuImg">
-            <img src="./img/kyoukamiMenu.webp" alt="Ruu 強髪メニュー" class="fadeRight">
+            <img src="./img/kyoukamiMenu.webp" alt="Ruu 強髪メニュー" class="pcOnly fadeRight">
+            <img src="./img/kyoukamiMenuSP.webp" alt="Ruu 強髪メニュー" class="kyoukamiMenuImgSp tabAndSp fadeRight">
         </div>
     </div>
     <!-- 強髪メニュー ここまで -->
