フッターリンク修正

--- a/humanstemcells.html
+++ b/humanstemcells.html
@@ -24,22 +24,22 @@
             <a href="/index.html"><img src="./img/logo.svg" alt="Ruu ロゴ" class="header__logoImg"></a><img src="./img/menu.svg" id="menuBtn" alt="メニュー" class="header__menuImg">
 
     <!-- メニュー -->
-        <div id="overlay" class="overlay"></div>
-        <nav id="jsNav" class="jsNav">
-            <img src="./img/closeBtn.svg" id="closeBtn" alt="メニューを閉じる" class="jsNav__closeBtn">
-            <ul class="jsNav__menu">
-                <li class="jsNav__list"><a href="#top">TOP</a></li>
-                <li class="jsNav__list"><a href="#concept">CONCEPT</a></li>
-                <li class="jsNav__list"><a href="#profile">PROFILE</a></li>
-                <li class="jsNav__list"><a href="#menu">MENU</a></li>
-                <li class="jsNav__list"><a href="#features">FEATURES</a></li>
-                <li class="jsNav__list"><a href="#news">NEWS</a></li>
-                <li class="jsNav__list"><a href="https://beauty.hotpepper.jp/slnH000705260/">RESERVATION</a></li>
-            </ul>
-            <a href="/index.html"><img src="./img/logo.svg" alt="Ruu ロゴ" class="jsNav__logo"></a>
-        </nav>
-        </div>
-    <!-- メニューここまで -->
+    <div id="overlay" class="overlay"></div>
+    <nav id="jsNav" class="jsNav">
+        <img src="./img/closeBtn.svg" id="closeBtn" alt="メニューを閉じる" class="jsNav__closeBtn">
+        <ul class="jsNav__menu">
+            <li class="jsNav__list"><a href="/#top">TOP</a></li>
+            <li class="jsNav__list"><a href="/#concept">CONCEPT</a></li>
+            <li class="jsNav__list"><a href="/#profile">PROFILE</a></li>
+            <li class="jsNav__list"><a href="/#menu">MENU</a></li>
+            <li class="jsNav__list"><a href="/#features">FEATURES</a></li>
+            <li class="jsNav__list"><a href="/#news">NEWS</a></li>
+            <li class="jsNav__list"><a href="https://beauty.hotpepper.jp/slnH000705260/">RESERVATION</a></li>
+        </ul>
+        <a href="/index.html"><img src="./img/logo.svg" alt="Ruu ロゴ" class="jsNav__logo"></a>
+    </nav>
+    </div>
+<!-- メニューここまで -->
     </header>
 
     <!-- ヘッダーここまで -->
@@ -225,12 +225,12 @@
         </div>
         <nav class="footerMenu">
             <ul>
-                <li><a href="#top" class="footerMenu__label">TOP</a></li>
-                <li><a href="#concept" class="footerMenu__label">CONCEPT</a></li>
-                <li><a href="#profile" class="footerMenu__label">PROFILE</a></li>
-                <li><a href="#menu" class="footerMenu__label">MENU</a></li>
-                <li><a href="#features" class="footerMenu__label">FEATURES</a></li>
-                <li><a href="#news" class="footerMenu__label">NEWS</a></li>
+                <li><a href="/#top" class="footerMenu__label">TOP</a></li>
+                <li><a href="/#concept" class="footerMenu__label">CONCEPT</a></li>
+                <li><a href="/#profile" class="footerMenu__label">PROFILE</a></li>
+                <li><a href="/#menu" class="footerMenu__label">MENU</a></li>
+                <li><a href="/#features" class="footerMenu__label">FEATURES</a></li>
+                <li><a href="/#news" class="footerMenu__label">NEWS</a></li>
                 <li><a href="https://beauty.hotpepper.jp/slnH000705260/" class="footerMenu__label">RESERVATION</a></li>
             </ul>
         </nav>
